// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DeckDetailsWidget /> renders correctly with description 1`] = `
<div
  className="card"
>
  <h4
    className="card-header"
  >
    Test deck
    <span
      className="float-right"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star fa-fw deck-favourite"
        data-deck-id={1}
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3z"
          fill="currentColor"
          style={{}}
        />
      </svg>
    </span>
  </h4>
  <ul
    className="list-group list-group-flush"
  >
    <li
      className="list-group-item"
    >
      <strong>
        Description:
      </strong>
       
      <span>
        Test deck description
      </span>
    </li>
    <li
      className="list-group-item"
    >
      <strong>
        Max cards:
      </strong>
       
      <span>
        5
      </span>
    </li>
  </ul>
  <div
    className="card-footer"
  >
    <button
      className="btn btn-success pull-right"
      data-deck-id={1}
      id="save-deck"
      onClick={[Function]}
      type="button"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`<DeckDetailsWidget /> renders correctly with favourite 1`] = `
<div
  className="card"
>
  <h4
    className="card-header"
  >
    Test deck
    <span
      className="float-right"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star fa-fw deck-favourite enabled"
        data-deck-id={1}
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3z"
          fill="currentColor"
          style={{}}
        />
      </svg>
    </span>
  </h4>
  <ul
    className="list-group list-group-flush"
  >
    <li
      className="list-group-item"
    >
      <strong>
        Description:
      </strong>
       
      <span />
    </li>
    <li
      className="list-group-item"
    >
      <strong>
        Max cards:
      </strong>
       
      <span>
        5
      </span>
    </li>
  </ul>
  <div
    className="card-footer"
  >
    <button
      className="btn btn-success pull-right"
      data-deck-id={1}
      id="save-deck"
      onClick={[Function]}
      type="button"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`<DeckDetailsWidget /> renders correctly without favourite 1`] = `
<div
  className="card"
>
  <h4
    className="card-header"
  >
    Test deck
    <span
      className="float-right"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star fa-fw deck-favourite"
        data-deck-id={1}
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3z"
          fill="currentColor"
          style={{}}
        />
      </svg>
    </span>
  </h4>
  <ul
    className="list-group list-group-flush"
  >
    <li
      className="list-group-item"
    >
      <strong>
        Description:
      </strong>
       
      <span />
    </li>
    <li
      className="list-group-item"
    >
      <strong>
        Max cards:
      </strong>
       
      <span>
        5
      </span>
    </li>
  </ul>
  <div
    className="card-footer"
  >
    <button
      className="btn btn-success pull-right"
      data-deck-id={1}
      id="save-deck"
      onClick={[Function]}
      type="button"
    >
      Save
    </button>
  </div>
</div>
`;
